kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocker-api
  labels:
    app: stocker-api
spec:
  selector:
    app: stocker-api
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
